--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -7,8 +7,11 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^0.27.2",
+    "pokedex-promise-v2": "^4.0.0",
+    "pokemon-sprites": "github:PokeAPI/sprites",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-poke-sprites": "^0.0.8",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
