--- a/pokemon-app/package.json
+++ b/pokemon-app/package.json
@@ -1,6 +1,7 @@
 {
   "name": "pokemon-app",
   "version": "0.1.0",
+  "homepage": "https://ladybluenotes.github.io/pokemon-app",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.9.3",
@@ -21,7 +22,7 @@
   },
   "scripts": {
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
